# simple-rpc-client

./: Cargo.toml  README.md
contrib/: run.sh
examples/: client.rs  transport.rs
src/: client.rs  error.rs  lib.rs  types.rs
src/client/: v28.rs
tests/: test_rpc_client.rs
